--- a/Expose/Dockerfile
+++ b/Expose/Dockerfile
@@ -2,7 +2,7 @@ FROM almalinux:9
 RUN dnf install nginx -y
 
 CMD ["nginx", "-g", "daemon off;"]
-EXPOSE = 80
+EXPOSE 80
 
 LABEL author="ganesh"\
       company="Infosys"\
